--- a/Basic_Samples/Functions/config.json
+++ b/Basic_Samples/Functions/config.json
@@ -1,9 +1,9 @@
 {
-    "DEPLOYMENT_NAME":"<Model Deployment Name>",
-    "OPENAI_API_BASE":"https://<Your Azure Resource Name>.openai.azure.com",
-    "OPENAI_API_VERSION":"<OpenAI API Version>",
+    "DEPLOYMENT_NAME":"chat",
+    "OPENAI_API_BASE":"https://cog-fth4qunyeo6vq.openai.azure.com",
+    "OPENAI_API_VERSION":"2023-03-15-preview",
     
-    "SEARCH_SERVICE_ENDPOINT": "https://<Your Search Service Name>.search.windows.net",
+    "SEARCH_SERVICE_ENDPOINT": "https://gptkb-fth4qunyeo6vq.search.windows.net",
     "SEARCH_INDEX_NAME": "recipes-vectors",
     "SEARCH_ADMIN_KEY": ""
 }
