--- a/Basic_Samples/Functions/config.json
+++ b/Basic_Samples/Functions/config.json
@@ -1,7 +1,7 @@
 {
-    "DEPLOYMENT_NAME":"chat",
+    "DEPLOYMENT_NAME":"chat2",
     "OPENAI_API_BASE":"https://cog-fth4qunyeo6vq.openai.azure.com",
-    "OPENAI_API_VERSION":"2023-03-15-preview",
+    "OPENAI_API_VERSION":"2023-07-01-preview",
     
     "SEARCH_SERVICE_ENDPOINT": "https://gptkb-fth4qunyeo6vq.search.windows.net",
     "SEARCH_INDEX_NAME": "recipes-vectors",
